Modification de la page d'accueil

--- a/wp-content/themes/interlignes/views/webfiles/styles/sass/footer.scss
+++ b/wp-content/themes/interlignes/views/webfiles/styles/sass/footer.scss
@@ -1,7 +1,8 @@
 footer {
-
+	padding: 3rem 0 3rem 0;
 	width: 100%;
 	background-color: $background-color_1;
+	margin-top: 5rem;
 
 	p {
 		color: $color_1;
@@ -11,17 +12,22 @@ footer {
 		font-family: $font-family_4;
 		letter-spacing: 0.1rem;
 	}
-   
+
 	a {
+		font-family: $font-family_4;
 		color: $color_1;
 		text-decoration: none;
+
 		&:hover {
 			text-decoration: underline #CFAE6E;
 		}
 	}
-    li{
+
+	li {
+		margin: 2rem 0 2rem 0;
 		list-style: none;
 	}
+
 	>div {
 		margin-left: 2rem;
 		max-width: 1500px;
@@ -36,102 +42,100 @@ footer {
 		height: 2rem;
 		margin-top: 0.5rem;
 	}
-	.menu-reseaux-sociaux-container{
-		li{
+
+	.menu-reseaux-sociaux-container {
+		li {
 			position: relative;
-          &:first-of-type{
-			&::before{
-				width: 32px;
-				height: 32px;
-				position: absolute;
-				top: 40px;
-				left: -45px;
-				content: '';
-				background-image: url('http://wordpress-stage.test/wp-content/uploads/2023/06/instagram-e1688129629102.png');
+
+			&:first-of-type {
+				&::before {
+					width: 32px;
+					height: 32px;
+					position: absolute;
+					left: -45px;
+					content: '';
+					background-image: url('http://wordpress-stage.test/wp-content/uploads/2023/06/facebook-e1688129645708.png');
+				}
 			}
-		  }
+
+			&:nth-of-type(2) {
+				&::before {
+					width: 32px;
+					height: 32px;
+					position: absolute;
+					left: -45px;
+					content: '';
+					background-image: url('http://wordpress-stage.test/wp-content/uploads/2023/06/instagram-e1688129629102.png');
+				}
+			}
 		}
 	}
-}
 
-.phone {
-	display: flex;
-    align-items: center;
-}
+	.menu-contact-container {
+		li {
+			position: relative;
 
-.gmail {
-	display: flex;
-    align-items: center;
-}
-
-.insta {
-	display: flex;
-	align-items: center;
-}
-
-.fb {
-	display: flex;
-	align-items: center;
-}
-
-h3 {
-	color: $color_1;
-}
-
-.comptefb {
-	margin-top: 0.8rem;
-	margin-left: 0.2rem;
-	font-family: $font-family_5;
-}
-
-.compte {
-	margin-top: 0.8rem;
-	margin-left: 0.2rem;
-	font-family: $font-family_2;
-}
-
-.num {
-	margin-top: 0.8rem;
-	margin-left: 0.2rem;
-	font-family: $font-family_2;
-}
-
-.inter {
-	margin-top: 0.8rem;
-	margin-left: 0.2rem;
-	font-family: $font-family_5;
-}
-
-@media screen and (max-width:824px) {
-	footer {
-		div {
-			display: block;
-			text-align: center;
-			align-items: center;
-			justify-content: center;
-
-			h3 {
-				margin: 1rem 0;
+			&:first-of-type {
+				&::before {
+					width: 32px;
+					height: 32px;
+					position: absolute;
+					left: -45px;
+					content: '';
+					background-image: url('http://wordpress-stage.test/wp-content/uploads/2023/06/telephone-call-e1688129732648.png');
+				}
 			}
-
-			
+			&:nth-of-type(2) {
+				&::before {
+					width: 32px;
+					height: 32px;
+					position: absolute;
+					left: -45px;
+					content: '';
+					background-image: url('http://wordpress-stage.test/wp-content/uploads/2023/06/e-mail-e1688129808496.png');
+				}
+			}
 		}
 	}
-}
 
-@media screen and (max-width:415px) {
-    footer {
-		div {
-			display: block;
-			text-align: center;
-			align-items: center;
-			justify-content: center;
 
-			h3 {
-				margin: 1rem 0;
+	h3 {
+		color: $color_1;
+	}
+
+
+
+	@media screen and (max-width:824px) {
+		footer {
+			div {
+				display: block;
+				text-align: center;
+				align-items: center;
+				justify-content: center;
+
+				h3 {
+					margin: 1rem 0;
+				}
+
+
 			}
+		}
+	}
 
-			
+	@media screen and (max-width:415px) {
+		footer {
+			div {
+				display: block;
+				text-align: center;
+				align-items: center;
+				justify-content: center;
+
+				h3 {
+					margin: 1rem 0;
+				}
+
+
+			}
 		}
 	}
 }
