--- a/wp-content/themes/interlignes/views/webfiles/styles/sass/music.scss
+++ b/wp-content/themes/interlignes/views/webfiles/styles/sass/music.scss
@@ -60,7 +60,7 @@ $font-family_4: 'roboto';
   }
 
   a {
-    color: $background-color_2;
+    color: $color_1;
     text-decoration: none;
     border: solid 2px $background-color_1;
     padding: 1rem;
@@ -69,7 +69,7 @@ $font-family_4: 'roboto';
 
   span {
     text-decoration: none;
-    color: $background-color_2;
+    color: $color_1;
     padding: 1rem;
     background: $background-color_6;
   }
