--- a/wp-content/themes/interlignes/views/webfiles/styles/sass/header.scss
+++ b/wp-content/themes/interlignes/views/webfiles/styles/sass/header.scss
@@ -6,9 +6,7 @@ $font-family_1: 'great vibes';
 $font-family_2: 'lobster';
 $font-family_3: 'kalam';
 $font-family_4: 'roboto';
-$font-family_5: 'kamal';
 $background-color_1: #115F7E;
-$background-color_2: white;
 $background-color_3: #DAD5D5;
 $background-color_4: #CFAE6E;
 $background-color_5: rgb(193, 148, 148);
@@ -77,7 +75,7 @@ header {
             width: 3rem;
             padding: 1rem;
             border: none;
-            background-color: $background-color_2;
+            background-color: $color_1;
         }
     }
 
@@ -141,6 +139,7 @@ header {
         padding: 0;
         margin: 0;
         position: absolute;
+        z-index: 10;
 
         li {
             float: none;
