--- a/wp-content/themes/interlignes/views/webfiles/styles/sass/main.scss
+++ b/wp-content/themes/interlignes/views/webfiles/styles/sass/main.scss
@@ -1,7 +1,5 @@
 @import "header.scss";
-@import "jeux.scss";
-@import "music.scss";
-@import "book.scss";
+@import "pageSecondaire.scss";
 @import "footer.scss";
 
 
