--- a/wp-content/themes/interlignes/views/webfiles/styles/sass/main.css
+++ b/wp-content/themes/interlignes/views/webfiles/styles/sass/main.css
@@ -132,6 +132,7 @@ header .sub-menu li a:hover {
   max-width: 1500px;
   margin: auto;
   display: flex;
+  justify-content: space-around;
   flex-wrap: wrap;
   justify-content: flex-start;
 }
