--- a/wp-content/themes/interlignes/views/webfiles/styles/sass/pageSecondaire.scss
+++ b/wp-content/themes/interlignes/views/webfiles/styles/sass/pageSecondaire.scss
@@ -10,6 +10,7 @@ $font-family_4: 'roboto';
   max-width: 1500px;
   margin: auto;
   display: flex;
+  justify-content: space-around;
   flex-wrap: wrap;
   justify-content: flex-start;
 
